# distributed-lock-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  clippy.toml  docker-compose.yaml  rustfmt.toml
.cursor/rules/: specify-rules.mdc
.github/workflows/: ci.yml
.specify/memory/: constitution.md
benches/: lock_acquisition.rs
crates/distributed-lock/: Cargo.toml
crates/distributed-lock-core/: Cargo.toml
crates/distributed-lock-core/src/: error.rs  lib.rs  prelude.rs  timeout.rs  traits.rs
crates/distributed-lock-file/: Cargo.toml
crates/distributed-lock-file/benches/: lock_acquisition.rs
crates/distributed-lock-file/src/: handle.rs  lib.rs  lock.rs  name.rs  provider.rs
crates/distributed-lock-mongo/: Cargo.toml
crates/distributed-lock-mongo/src/: document.rs  handle.rs  lib.rs  lock.rs  options.rs
crates/distributed-lock-mysql/: Cargo.toml
crates/distributed-lock-mysql/src/: connection.rs  handle.rs  lib.rs  lock.rs  name.rs  provider.rs  rw_lock.rs
crates/distributed-lock-postgres/: Cargo.toml
crates/distributed-lock-postgres/src/: connection.rs  handle.rs  key.rs  lib.rs  lock.rs  provider.rs  rw_lock.rs
crates/distributed-lock-redis/: Cargo.toml
crates/distributed-lock-redis/src/: handle.rs  lib.rs  lock.rs  provider.rs  rw_lock.rs  semaphore.rs
crates/distributed-lock-redis/src/redlock/: acquire.rs  extend.rs  helper.rs  mod.rs  release.rs  timeouts.rs
crates/distributed-lock/src/: lib.rs
examples/: file_lock.rs  meta_crate.rs  mysql_lock.rs  postgres_lock.rs  redis_lock.rs
scripts/: publish-crates.sh
specs/001-port-distributed-lock/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-port-distributed-lock/checklists/: requirements.md
specs/001-port-distributed-lock/contracts/: core-traits.rs  file-backend.rs  postgres-backend.rs  redis-backend.rs
src/: lib.rs
tests/: file_tests.rs  mongo_tests.rs  mysql_tests.rs  postgres_tests.rs  provider_tests.rs  redis_tests.rs
tests/common/: mock_provider.rs  mod.rs  provider_tests.rs
