[package]
name = "distributed-lock-workspace"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
distributed-lock = { path = "crates/distributed-lock" }
distributed-lock-core = { path = "crates/distributed-lock-core" }
distributed-lock-file = { path = "crates/distributed-lock-file" }
distributed-lock-postgres = { path = "crates/distributed-lock-postgres" }
distributed-lock-redis = { path = "crates/distributed-lock-redis" }

[dev-dependencies]
tokio = { workspace = true }
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3"
fred = "9"

[workspace]
resolver = "2"
members = [
    "crates/distributed-lock-core",
    "crates/distributed-lock-postgres",
    "crates/distributed-lock-redis",
    "crates/distributed-lock-file",
    "crates/distributed-lock",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tracing = "0.1"
