[package]
name = "distributed-lock-workspace"
version = "0.2.0"
edition = "2024"
publish = false

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["XuHaoJun <xuhaojuntw@gmail.com>"]
license = "MIT"
repository = "https://github.com/XuHaoJun/distributed-lock-rs"
readme = "README.md"
rust-version = "1.88"

[lints.clippy]
uninlined_format_args = "allow"

[dependencies]
distributed-lock = { path = "crates/distributed-lock" }
distributed-lock-core = { path = "crates/distributed-lock-core" }
distributed-lock-file = { path = "crates/distributed-lock-file" }
distributed-lock-mysql = { path = "crates/distributed-lock-mysql" }
distributed-lock-postgres = { path = "crates/distributed-lock-postgres" }
distributed-lock-redis = { path = "crates/distributed-lock-redis" }
distributed-lock-mongo = { path = "crates/distributed-lock-mongo" }

[dev-dependencies]
tokio = { workspace = true }
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3"
fred = "9"
uuid = { version = "1", features = ["v4"] }
mongodb = "3"

[workspace]
resolver = "2"
members = [
    "crates/distributed-lock-core",
    "crates/distributed-lock-mysql",
    "crates/distributed-lock-postgres",
    "crates/distributed-lock-redis",
    "crates/distributed-lock-file",
    "crates/distributed-lock-mongo",
    "crates/distributed-lock",
]

[workspace.dependencies]
distributed-lock-core = { path = "crates/distributed-lock-core", version = "0.2.0" }
distributed-lock-postgres = { path = "crates/distributed-lock-postgres", version = "0.2.0" }
distributed-lock-redis = { path = "crates/distributed-lock-redis", version = "0.2.0" }
distributed-lock-file = { path = "crates/distributed-lock-file", version = "0.2.0" }
distributed-lock-mysql = { path = "crates/distributed-lock-mysql", version = "0.2.0" }
distributed-lock-mongo = { path = "crates/distributed-lock-mongo", version = "0.2.0" }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tracing = "0.1"
