[package]
name = "distributed-lock-core"
version = "0.1.0"
edition = "2021"
authors = ["XuHaoJun <xuhaojuntw@gmail.com>"]
license = "MIT"
description = "Core traits and types for distributed locks"
repository = "https://github.com/XuHaoJun/distributed-lock-rs"
keywords = ["distributed", "lock", "mutex", "synchronization", "traits"]
categories = ["concurrency", "asynchronous"]
rust-version = "1.88"

[lints.clippy]
uninlined_format_args = "allow"

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
