[package]
name = "distributed-lock-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core traits and types for distributed locks"
repository.workspace = true
readme.workspace = true
keywords = ["distributed", "lock", "mutex", "synchronization", "traits"]
categories = ["concurrency", "asynchronous"]
rust-version.workspace = true

[lints.clippy]
uninlined_format_args = "allow"

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
