[package]
name = "distributed-lock-file"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "File system backend for distributed locks using OS-level file locking"
repository.workspace = true
readme.workspace = true
keywords = ["distributed", "lock", "mutex", "file", "filesystem"]
categories = ["concurrency", "asynchronous"]
rust-version.workspace = true

[lints.clippy]
uninlined_format_args = "allow"

[dependencies]
distributed-lock-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
fd-lock = "4"
sha2 = "0.10"
async-trait = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3"

[[bench]]
name = "lock_acquisition"
harness = false