[package]
name = "distributed-lock-mongo"
version = "0.1.0"
edition = "2021"

[dependencies]
distributed-lock-core = { path = "../distributed-lock-core" }
mongodb = "3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
