[package]
name = "distributed-lock-mongo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MongoDB backend for distributed locks using atomic updates and TTL indexes"
repository.workspace = true
readme.workspace = true
keywords = ["distributed", "lock", "mutex", "mongo", "mongodb"]
categories = ["concurrency", "asynchronous", "database"]
rust-version.workspace = true

[lints.clippy]
uninlined_format_args = "allow"

[dependencies]
distributed-lock-core = { workspace = true }
mongodb = "3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
