[package]
name = "distributed-lock-mysql"
version = "0.1.0"
edition = "2021"
authors = ["XuHaoJun <xuhaojuntw@gmail.com>"]
license = "MIT"
description = "MySQL backend for distributed locks using GET_LOCK/RELEASE_LOCK functions"
repository = "https://github.com/XuHaoJun/distributed-lock-rs"
keywords = ["distributed", "lock", "mutex", "mysql", "mariadb"]
categories = ["concurrency", "asynchronous", "database"]
rust-version = "1.88"

[lints.clippy]
uninlined_format_args = "allow"

[dependencies]
distributed-lock-core = { path = "../distributed-lock-core", version = "0.1.0" }
tokio = { workspace = true }
tracing = { workspace = true }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls"] }
sha2 = "0.10"

[dev-dependencies]