[package]
name = "distributed-lock-mysql"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MySQL backend for distributed locks using GET_LOCK/RELEASE_LOCK functions"
repository.workspace = true
readme.workspace = true
keywords = ["distributed", "lock", "mutex", "mysql", "mariadb"]
categories = ["concurrency", "asynchronous", "database"]
rust-version.workspace = true

[lints.clippy]
uninlined_format_args = "allow"

[dependencies]
distributed-lock-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio-native-tls"] }
sha2 = "0.10"

[dev-dependencies]