[package]
name = "distributed-lock-postgres"
version = "0.1.0"
edition = "2021"
authors = ["XuHaoJun <xuhaojuntw@gmail.com>"]
license = "MIT"
description = "PostgreSQL backend for distributed locks using advisory locks"
repository = "https://github.com/XuHaoJun/distributed-lock-rs"
keywords = ["distributed", "lock", "mutex", "postgres", "postgresql", "database"]
categories = ["concurrency", "asynchronous", "database"]
rust-version = "1.88"

[lints.clippy]
uninlined_format_args = "allow"

[dependencies]
distributed-lock-core = { path = "../distributed-lock-core", version = "0.1.0" }
tokio = { workspace = true }
tracing = { workspace = true }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
sha2 = "0.10"

[dev-dependencies]
