[package]
name = "distributed-lock-postgres"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "PostgreSQL backend for distributed locks using advisory locks"
repository.workspace = true
readme.workspace = true
keywords = ["distributed", "lock", "mutex", "postgresql"]
categories = ["concurrency", "asynchronous", "database"]
rust-version.workspace = true

[lints.clippy]
uninlined_format_args = "allow"

[dependencies]
distributed-lock-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls"] }
sha1 = "0.10"

[dev-dependencies]
