[package]
name = "distributed-lock-redis"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
license = "MIT OR Apache-2.0"
description = "Redis backend for distributed locks with RedLock algorithm support"
repository = "https://github.com/yourusername/distributed-lock-rs"
keywords = ["distributed", "lock", "mutex", "redis", "redlock", "semaphore"]
categories = ["concurrency", "asynchronous", "database"]
rust-version = "1.88"

[dependencies]
distributed-lock-core = { path = "../distributed-lock-core" }
tokio = { workspace = true }
tracing = { workspace = true }
fred = "9"
rand = "0.8"

[dev-dependencies]
