[package]
name = "distributed-lock-redis"
version = "0.1.0"
edition = "2021"
authors = ["XuHaoJun <xuhaojuntw@gmail.com>"]
license = "MIT"
description = "Redis backend for distributed locks with RedLock algorithm support"
repository = "https://github.com/XuHaoJun/distributed-lock-rs"
keywords = ["distributed", "lock", "mutex", "redis", "redlock", "semaphore"]
categories = ["concurrency", "asynchronous", "database"]
rust-version = "1.88"

[lints.clippy]
uninlined_format_args = "allow"

[dependencies]
distributed-lock-core = { path = "../distributed-lock-core", version = "0.1.0" }
tokio = { workspace = true }
tracing = { workspace = true }
fred = "9"
rand = "0.8"

[dev-dependencies]
