[package]
name = "distributed-lock-redis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Redis backend for distributed locks with RedLock algorithm support"
repository.workspace = true
readme.workspace = true
keywords = ["distributed", "lock", "redis", "redlock", "semaphore"]
categories = ["concurrency", "asynchronous", "database"]
rust-version.workspace = true

[lints.clippy]
uninlined_format_args = "allow"

[dependencies]
distributed-lock-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
fred = "9"
rand = "0.8"

[dev-dependencies]
