[package]
name = "distributed-lock"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
license = "MIT OR Apache-2.0"
description = "Distributed locks for Rust with multiple backend support (PostgreSQL, Redis, file system)"
repository = "https://github.com/yourusername/distributed-lock-rs"
keywords = ["distributed", "lock", "mutex", "synchronization", "postgres", "redis", "file"]
categories = ["concurrency", "asynchronous", "database"]
readme = "README.md"
rust-version = "1.75"

[dependencies]
distributed-lock-core = { path = "../distributed-lock-core" }
distributed-lock-postgres = { path = "../distributed-lock-postgres" }
distributed-lock-redis = { path = "../distributed-lock-redis" }
distributed-lock-file = { path = "../distributed-lock-file" }

[dev-dependencies]
