[package]
name = "distributed-lock"
version = "0.1.0"
edition = "2021"
authors = ["XuHaoJun <xuhaojuntw@gmail.com>"]
license = "MIT"
description = "Distributed locks for Rust with multiple backend support (PostgreSQL, Redis, file system)"
repository = "https://github.com/XuHaoJun/distributed-lock-rs"
keywords = ["distributed", "lock", "postgres", "redis", "file"]
categories = ["concurrency", "asynchronous", "database"]
rust-version = "1.88"

[lints.clippy]
uninlined_format_args = "allow"

[dependencies]
distributed-lock-core = { path = "../distributed-lock-core", version = "0.1.0" }
distributed-lock-postgres = { path = "../distributed-lock-postgres", version = "0.1.0" }
distributed-lock-redis = { path = "../distributed-lock-redis", version = "0.1.0" }
distributed-lock-file = { path = "../distributed-lock-file", version = "0.1.0" }

[dev-dependencies]
